fix: sticky header covers the clicked heading by table of content

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,10 @@ $body-secondary-bg-dark: #171717;
   background-color: $primary;
 }
 
+html {
+  scroll-padding-top: 64px;
+}
+
 .bd-btn:focus,
 .bd-btn:active {
   border-color: transparent !important;
